--- a/src/main/java/Vista/panelIntroducir.form
+++ b/src/main/java/Vista/panelIntroducir.form
@@ -57,7 +57,7 @@
           </Group>
           <Group type="102" attributes="0">
               <EmptySpace min="118" pref="118" max="-2" attributes="0"/>
-              <Component id="jButton1" min="-2" pref="124" max="-2" attributes="0"/>
+              <Component id="botonIntroducir" min="-2" pref="124" max="-2" attributes="0"/>
               <EmptySpace min="29" pref="29" max="-2" attributes="0"/>
               <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
           </Group>
@@ -90,7 +90,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
                       <EmptySpace min="59" pref="59" max="-2" attributes="0"/>
-                      <Component id="jButton1" min="-2" pref="43" max="-2" attributes="0"/>
+                      <Component id="botonIntroducir" min="-2" pref="43" max="-2" attributes="0"/>
                   </Group>
                   <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
               </Group>
@@ -134,7 +134,7 @@
         </Property>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton1">
+    <Component class="javax.swing.JButton" name="botonIntroducir">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="0" green="0" red="0" type="rgb"/>
@@ -146,7 +146,7 @@
         <Property name="toolTipText" type="java.lang.String" value="meter nueva venta"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botonIntroducirActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
