--- a/src/main/java/Vista/panelListar.form
+++ b/src/main/java/Vista/panelListar.form
@@ -62,6 +62,9 @@
         <Property name="text" type="java.lang.String" value="Refresh"/>
         <Property name="toolTipText" type="java.lang.String" value="refrescar tabla"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botonRefrescarActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="botonBorrar">
       <Properties>
